$Id: CHANGES,v 1.12 1999/11/03 21:05:52 tiniou Exp $

Changes between versions 0.4b7 and 0.4b8 (released November 3, 1999)
====================================================================

1.	Put dump sources under CVS, added Id tags in all files so
	one can use 'ident' on binary files.

2.	Added the dump/restore version in the usage text so one can
	easily verify the version he is using.

3.	Small patch from Nuno Oliveira <nuno@eq.uc.pt> which fixes
	a va_start/va_end problem on linux-ppc (always call va_start
	va_end in pairs each time we use a vararg function).

4.	Added again the DT_* constants because old libc does not
	contain them :(. Thanks to Eric Maisonobe <virnet@nat.fr>
	for submitting the bug report.

5.	Use ext2fs_llseek instead of llseek. With recent e2fsprogs
	this should enable dumping big (huge) filesystems.

6.	Added the RSH environment variable in order to be able to
	use a rsh replacement like ssh when doing remote backups (and
	bypass the security limitations of rcmd). Now you can do remote
	backups without being root (or making dump setuid root).

7.	Modified again the way dumpdates works. For incremental dumps,
	we need to read dumpdates even if we are not using 'u' option.
	Thanks to Bdale Garbee <bdale@gag.com> for his ideas on how
	this should work.

Changes between versions 0.4b6 and 0.4b7 (released October 8, 1999)
===================================================================

1.	Removed the 'k' flag from the restore 'about' text if kerberos
	was not compiled in.

2.	Prototyped (f)setflags from e2fsprogs and corrected the calls
	to them (fsetflags takes a char*, setflags an open fd!).

3.	(f)setflags is called only if the flags aren't empty. If the
	file is a special file, a warning is printed, because changing
	flags implies opening the device. Normally, a special file
	should not have any flag... (Debian bug #29775, patch provided
	by Abhijit Dasgupta <abhijit@ans.net>).
